Fixed gaps between sections
Fixed gaps between sections

--- a/app/src/styles/App.module.css
+++ b/app/src/styles/App.module.css
@@ -67,9 +67,9 @@
 }
 
 main {
-  margin-top: 160px;
+  margin-top: 0;
 }
-body, html {
+body, html, *{
   margin: 0;
   padding: 0;
   font-family: "Segoe UI", Arial, sans-serif;
